dootask-web/deploy/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dootask-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dootask-web
  template:
    metadata:
      labels:
        app: dootask-web
    spec:
      containers:
      - name: dootask
        image: hub.hitosea.com/official-website/dootask-site:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: dootask.conf  # 挂载 cloudflare.conf

      volumes:
      - name: config
        configMap:
          name: nginx-config
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: dootask-web
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: dootask-web
